-- Alec Snyder
-- chat server lab 2
name:           chat
version:        1.0.0
license-file:   LICENSE
author:         Alec Snyder
maintainer:     alsnyder@uchicago.edu
synopsis:       Lab 2 - Chat Server
description:    A simple irc-like chat room
build-type:     Simple
cabal-version:  >= 1.10
category:       System

extra-source-files:
  README.md

library
  hs-source-dirs: src
  exposed-modules:
    Chat
  build-depends:
    base
  default-language: Haskell2010

executable chat
  main-is: Server.hs
  build-depends:
    base
   ,chat
   ,network
  default-language: Haskell2010

test-suite test-chat
  hs-source-dirs: test
  main-is: TestChat.hs
  type: exitcode-stdio-1.0
  build-depends:
    base < 5
   ,chat
   ,hspec
   ,QuickCheck
  default-language: Haskell2010
  ghc-options: -Wall

